2017-05-28  Boruch Baum  <boruch_baum@gmx.com>

	* w3m-filter.el (w3m-toggle-filtering): New user command.

	* w3m.el (w3m-lynx-like-map, w3m-info-like-map): Bind "f" to it.

	* w3m-lnum.el (w3m-lnum-mode-map): Don't bind f, F, and w keys;
	use `L'-prefixed version defined in `w3m-lnum-map' instead.

2017-05-26  Aubrey Raech  <aubrey@raech.net>

	* w3m-search.el (w3m-search-engine-alist):
	Replace freshmeat with duckduckgo.

2017-05-24  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m.el (w3m-url-decode-string): Fix previous commit, that breaks url
	of being not encoded.

2017-05-22  Katsumi Yamaoka  <yamaoka@jpl.org>

	Don't use string-(as|make|to)-(multi|uni)byte ([emacs-w3m:12630]).

	* w3m.el (w3m-url-decode-string): Use a unibyte buffer to represent
	encoded byte stream.

	* w3m-util.el (w3m-decode-coding-string-with-priority): Simplify.

2017-05-11  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m-proc.el: Bind w3m-clear-display-while-reading, w3m-current-title.

2017-05-10  Katsumi Yamaoka  <yamaoka@jpl.org>

	Allow local file of which the name is not absolute ([emacs-w3m:12643])

	* w3m.el (w3m-canonicalize-url): Allow local file of relative name.
	* w3m-util.el (w3m-popup-buffer): Preserve the current directory.

2017-03-16  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m-proc.el (w3m-process-stop): Blank page if
	w3m-clear-display-while-reading is non-nil ([emacs-w3m:12633]).
	(w3m-process-kill-stray-processes): Separate it from
	w3m-process-start-queued-processes.

2017-02-20  Katsumi Yamaoka  <yamaoka@jpl.org>

	Revert last change in w3m-decode-coding-string-with-priority.

	* w3m-util.el (w3m-decode-coding-string-with-priority): Revert.
	[emacs-w3m:12630]

2017-02-03  Katsumi Yamaoka  <yamaoka@jpl.org>

	Don't use string-make-(multi|uni)byte that got obsolete in Emacs 26.

	* octet.el (w3m-about-octet-attachments, octet-w3m-region):
	Use (decode|encode)-coding-string.
	* w3m-image.el (w3m-imagick-convert-buffer): Bind LC_ALL with C.